objects/WintrustEnvConfig__mdt.object
<CustomObject>
    <description>It contains Wintrust Configurations</description>
    <fields>
        <fullName>AdobeAnalyticsScript__c</fullName>
        <description>Adobe Analytics Script</description>
        <label>AdobeAnalytics Script</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchRetryCount__c</fullName>
        <defaultValue>120000</defaultValue>
        <description>Batch Retry Count</description>
        <label>BatchRetryCount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CZChexSystemTags__c</fullName>
        <description>Chex System Tags for Adverse Action letter</description>
        <label>Chex System Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CZFraudTags__c</fullName>
        <description>Fraud System Tags for Adverse Action letter</description>
        <label>Fraud Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CssFontSrc__c</fullName>
        <description>Css Font Src</description>
        <label>CssFontSrc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISDLRTransErrorCode__c</fullName>
        <description>FIS Dollar Transaction Error Codes</description>
        <label>FIS Dollar Transaction Error Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISImmediateTransErrorCode__c</fullName>
        <description>FIS Immediate Transaction Error Codes</description>
        <label>FIS Immediate Transaction Error Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISPasswordExpireDays__c</fullName>
        <description>Days after which Fis password will get expired</description>
        <label>FISPasswordExpireDays</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InterestRateAutomation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Interest Rate Automation</description>
        <label>Interest Rate Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestEnv__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Test Environment.</description>
        <label>IsTestEnvironment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MicrodepositsReminderSchedule__c</fullName>
        <description>Microdeposits Reminder Schedule</description>
        <label>Microdeposits Reminder Schedule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoInquiriesThreshold__c</fullName>
        <description>Threshold for Inquiries</description>
        <label>No Inquiries Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwedAmountThreshold__c</fullName>
        <description>Threshold for Amount owed by applicant</description>
        <label>Owed Amount Threshold</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PassChangeNotifyMail__c</fullName>
        <description>Pass Change Notify Mail id</description>
        <label>PassChangeNotifyMail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurgeExpiredAndCancelSub__c</fullName>
        <description>Days after which Expired and Cancel submissions will be deleted</description>
        <label>PurgeExpiredAndCancelSubmission</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PurgeSubmission__c</fullName>
        <description>Days after which submissions will be deleted</description>
        <label>PurgeSubmission</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Wintrust Env Config</label>
    <pluralLabel>Wintrust Env Config</pluralLabel>
</CustomObject>